name:                statsd
version:             0.1.0.0
synopsis:            Haskell clone of etsy's statsd
description:         Please see README.md
homepage:            http://github.com/ant1441/statsd#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Hodgen
maintainer:          adam@hodgen.uk
copyright:           2010 Adam Hodgen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Statsd.Config, Statsd.Metrics, Statsd.Parser
  build-depends:
                       attoparsec,
                       base,
                       bytestring,
                       network,
                       optparse-applicative
  other-modules:       Paths_statsd
  default-language:    Haskell2010

executable statsd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                       base,
                       bytestring,
                       network,
                       statsd
  default-language:    Haskell2010

test-suite statsd-test
  type:                exitcode-stdio-1.0
  exposed-modules:     Statsd.Test.Parser
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
                       base,
                       bytestring,
                       hspec,
                       hspec-attoparsec,
                       statsd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ant1441/statsd
