name:                statsd
version:             0.1.0.0
synopsis:            Haskell clone of etsy's statsd
description:         Please see README.md
homepage:            http://github.com/ant1441/statsd#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Hodgen
maintainer:          ant1441@users.noreply.github.com
copyright:           2010 Adam Hodgen
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:

                       Statsd.Config,
                       Statsd.Datastore,
                       Statsd.Flush
                       Statsd.Metrics,
                       Statsd.Parser,
                       Statsd.Utils

  build-depends:
                       async,
                       attoparsec,
                       base,
                       bytestring,
                       conduit,
                       conduit-extra,
                       exceptions,
                       filepath,
                       hslogger,
                       network,
                       optparse-applicative,
                       stm
  other-modules:       Paths_statsd
  default-language:    Haskell2010

executable statsd
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                       async,
                       base,
                       bytestring,
                       conduit,
                       conduit-extra,
                       hslogger,
                       network,
                       resourcet,
                       statsd,
                       streaming-commons,
                       transformers
  default-language:    Haskell2010

test-suite statsd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, test/Statsd, test/Statsd/Test
  main-is:             Spec.hs
  other-modules:
                       Statsd.Test.Datastore,
                       Statsd.Test.Parser,
                       Statsd.Test.Utils
  build-depends:
                       attoparsec,
                       base,
                       bytestring,
                       hspec,
                       hspec-attoparsec,
                       QuickCheck,
                       statsd,
                       stm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ant1441/statsd
